<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linear_layout_how_to_make_t" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".tablet.HowToMake_TABLET"
    android:background="@color/background">

    <TextView
        android:id="@+id/ingredients_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:text="@string/ingredients"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/add_to_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:background="@color/colorPrimary"
        android:padding="4dp"
        android:text="@string/addIngredientToWidget"
        android:textColor="@color/White" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@color/colorPrimary"
        android:layout_margin="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        android:layout_margin="4dp"/>
    <TextView
        android:id="@+id/steps_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/steps"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:padding="5dp"
        android:layout_margin="5dp"
        android:textColor="@color/White"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_recycler_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>