<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linear_layout_how_to_make_p"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".phone.HowToMake_PHONE">


        <TextView
            android:id="@+id/ingredients_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/colorPrimary"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/add_to_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:text="@string/addIngredientToWidget"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="1dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="4dp"
            android:background="@color/colorPrimary" />

        <TextView
            android:id="@+id/steps_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/steps"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/White" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>